# can_adapter

./: CMakeLists.txt  README.md  audi_a8_adapter.launch  package.xml
include/audi_a8_can/: CANContainer.h  CANTrans.h  can_base.h  can_signal.h  can_translator.h
parameters/: Flexray_CAN.dbc  audi_a8_can_params.yaml  key.map  trajectory_draft.dbc
parameters/audi_a8/: key.map  unit.map
src/: audi_a8_control.cpp  audi_a8_control.h  audi_a8_msgs_processor.cpp  audi_a8_msgs_processor.h  test_audi_a8_can.cpp
src/can_adapters/: CANContainer.cpp  CANTrans.cpp  can_base.cpp  can_signal.cpp  can_translator.cpp
src/can_matrix_spi/: recv.cpp  recv_send.h  send.cpp  service_handler_module.cpp  service_handler_module.h  spi_dbus_hal.cpp  spi_dbus_hal.h  spi_dbus_hal_slave.cpp
src/lib/: hdmap_api_py.py
